--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@ nav a {
     font-weight: bold;
 }
 
+nav a:hover {
+    color: white;
+}
+
 section {
     padding: 40px 20px;
 }
@@ -42,7 +46,7 @@ section {
     padding: 25px;
     margin: 20px auto;
     border-radius: 15px;
-    max-width: 650px;
+    max-width: 700px;
     box-shadow: 0 0 20px rgba(255,45,85,0.3);
 }
 
@@ -75,37 +79,65 @@ RBX Pro — Лучшие гайды по Roblox
 </header>
 
 <nav>
-<a href="#tips">Советы</a>
-<a href="#games">Топ игры</a>
-<a href="#robux">Robux</a>
+<a href="#">Главная</a>
+<a href="#">Гайды</a>
+<a href="#">Новости</a>
 </nav>
 
-<section id="tips">
+<section>
 <div class="card">
-<h2>🔥 Как быстро заработать Robux</h2>
-<p>Создай свою игру или одежду и выставь её на продажу. Делай качественные аватарки и иконки.</p>
-<button onclick="alert('Создавай и зарабатывай! 💰')">Попробовать</button>
+<h2>🎮 Лучшие игры в Roblox в 2026</h2>
+<p>Blox Fruits — прокачка и боссы.</p>
+<p>Brookhaven — ролевая жизнь.</p>
+<p>Adopt Me — питомцы и обмен.</p>
+<p>Pet Simulator — фарм и редкие петы.</p>
+<button onclick="alert('Выбирай игру и начинай! 🚀')">Играть</button>
 </div>
 </section>
 
-<section id="games">
+<section>
 <div class="card">
-<h2>🎮 Популярные режимы</h2>
-<p>Brookhaven, Blox Fruits, Adopt Me, Pet Simulator.</p>
-<button onclick="alert('Выбери игру и стань топом! 🚀')">Играть</button>
+<h2>💰 Как заработать Robux честно</h2>
+<p>Создавай одежду и продавай её.</p>
+<p>Делай собственные игры.</p>
+<p>Используй Developer Products.</p>
+<p>Не верь сайтам с бесплатными Robux — это обман.</p>
+<button onclick="alert('Работай честно! 💵')">Понятно</button>
 </div>
 </section>
 
-<section id="robux">
+<section>
 <div class="card">
-<h2>⚠️ Важно</h2>
-<p>Не используй сайты с бесплатными Robux — это обман. Зарабатывай честно!</p>
-<button onclick="alert('Играй безопасно! 🛡️')">Понял</button>
+<h2>⚔️ Быстрая прокачка в Blox Fruits</h2>
+<p>Всегда бери квест перед фармом.</p>
+<p>Light и Buddha — лучшие фрукты для новичков.</p>
+<p>Фармить лучше на островах своего уровня.</p>
+<button onclick="alert('+1000 EXP 😎')">Качаться</button>
+</div>
+</section>
+
+<section>
+<div class="card">
+<h2>🏆 Как стать популярным в Roblox</h2>
+<p>Создавай уникальные карты.</p>
+<p>Делай крутые иконки.</p>
+<p>Продвигай игру через TikTok и YouTube.</p>
+<button onclick="alert('Ты будущий разработчик! 🔥')">Стать популярным</button>
+</div>
+</section>
+
+<section>
+<div class="card">
+<h2>🛡 Безопасность в Roblox</h2>
+<p>Никому не давай пароль.</p>
+<p>Не переходи по подозрительным ссылкам.</p>
+<p>Включи двухфакторную защиту.</p>
+<button onclick="alert('Играй безопасно! 🛡')">Я понял</button>
 </div>
 </section>
 
 <footer>
-© 2026 RBX Pro | Скоро здесь будет реклама 💵
+© 2026 RBX Pro | Сайт создан начинающим разработчиком 🚀
 </footer>
 
 </body>
