--- a/index.html
+++ b/index.html
@@ -1,140 +1,90 @@
+
+   
+   
 <!DOCTYPE html>
 <html lang="ru">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>RBX Pro — Гайды по Roblox</title>
-
 <style>
 body {
     margin: 0;
     font-family: Arial, sans-serif;
-    background: linear-gradient(135deg, #111, #1e1e1e);
+    background: #0f0f0f;
     color: white;
-    text-align: center;
 }
 
 header {
-    padding: 25px;
-    font-size: 30px;
-    font-weight: bold;
-    background: #ff2d55;
-}
-
-nav {
-    padding: 15px;
-    background: #222;
-}
-
-nav a {
-    color: #ff2d55;
-    margin: 0 15px;
-    text-decoration: none;
+    background: #111;
+    padding: 20px;
+    text-align: center;
+    font-size: 28px;
     font-weight: bold;
 }
 
-nav a:hover {
-    color: white;
+.container {
+    max-width: 900px;
+    margin: 40px auto;
+    padding: 20px;
+    background: #1a1a1a;
+    border-radius: 12px;
 }
 
-section {
-    padding: 40px 20px;
+h1 {
+    color: #ff4757;
 }
 
-.card {
-    background: #2a2a2a;
-    padding: 25px;
-    margin: 20px auto;
-    border-radius: 15px;
-    max-width: 700px;
-    box-shadow: 0 0 20px rgba(255,45,85,0.3);
+h2 {
+    margin-top: 30px;
+    color: #ffa502;
 }
 
-button {
-    background: #ff2d55;
-    border: none;
-    padding: 12px 20px;
-    border-radius: 8px;
-    cursor: pointer;
-    font-weight: bold;
-    color: white;
-}
-
-button:hover {
-    background: #ff4f70;
+p {
+    line-height: 1.6;
 }
 
 footer {
-    margin-top: 40px;
+    text-align: center;
     padding: 20px;
     background: #111;
+    margin-top: 40px;
 }
 </style>
 </head>
-
 <body>
 
 <header>
-RBX Pro — Лучшие гайды по Roblox
+🎮 RBX Pro — Лучшие гайды по Roblox
 </header>
 
-<nav>
-<a href="#">Главная</a>
-<a href="#">Гайды</a>
-<a href="#">Новости</a>
-</nav>
+<div class="container">
+<h1>Как стать популярным в Roblox</h1>
 
-<section>
-<div class="card">
-<h2>🎮 Лучшие игры в Roblox в 2026</h2>
-<p>Blox Fruits — прокачка и боссы.</p>
-<p>Brookhaven — ролевая жизнь.</p>
-<p>Adopt Me — питомцы и обмен.</p>
-<p>Pet Simulator — фарм и редкие петы.</p>
-<button onclick="alert('Выбирай игру и начинай! 🚀')">Играть</button>
-</div>
-</section>
+<p>Многие игроки мечтают стать популярными в Roblox. 
+Но для этого нужно не просто играть, а создавать что-то своё.</p>
 
-<section>
-<div class="card">
-<h2>💰 Как заработать Robux честно</h2>
-<p>Создавай одежду и продавай её.</p>
-<p>Делай собственные игры.</p>
-<p>Используй Developer Products.</p>
-<p>Не верь сайтам с бесплатными Robux — это обман.</p>
-<button onclick="alert('Работай честно! 💵')">Понятно</button>
-</div>
-</section>
+<h2>1. Создавай уникальные игры</h2>
+<p>Используй Roblox Studio. Делай интересные режимы, 
+добавляй задания, уровни и крутые карты.</p>
 
-<section>
-<div class="card">
-<h2>⚔️ Быстрая прокачка в Blox Fruits</h2>
-<p>Всегда бери квест перед фармом.</p>
-<p>Light и Buddha — лучшие фрукты для новичков.</p>
-<p>Фармить лучше на островах своего уровня.</p>
-<button onclick="alert('+1000 EXP 😎')">Качаться</button>
-</div>
-</section>
+<h2>2. Делай красивые иконки</h2>
+<p>Игроки сначала видят картинку игры. 
+Если она яркая и понятная — они нажмут на неё.</p>
 
-<section>
-<div class="card">
-<h2>🏆 Как стать популярным в Roblox</h2>
-<p>Создавай уникальные карты.</p>
-<p>Делай крутые иконки.</p>
-<p>Продвигай игру через TikTok и YouTube.</p>
-<button onclick="alert('Ты будущий разработчик! 🔥')">Стать популярным</button>
-</div>
-</section>
+<h2>3. Продвигай игру</h2>
+<p>Снимай видео в TikTok или YouTube. 
+Показывай обновления и новые функции.</p>
 
-<section>
-<div class="card">
-<h2>🛡 Безопасность в Roblox</h2>
-<p>Никому не давай пароль.</p>
-<p>Не переходи по подозрительным ссылкам.</p>
-<p>Включи двухфакторную защиту.</p>
-<button onclick="alert('Играй безопасно! 🛡')">Я понял</button>
+<h2>Безопасность в Roblox</h2>
+<p>Никогда не давай пароль другим людям. 
+Не переходи по подозрительным ссылкам. 
+Включи двухфакторную защиту.</p>
+
+<h2>Как заработать в Roblox</h2>
+<p>Можно продавать Game Pass, одежду, доступ к VIP-зонам 
+или создавать популярные игры с донатом.</p>
+
 </div>
-</section>
 
 <footer>
 © 2026 RBX Pro | Сайт создан начинающим разработчиком 🚀
