--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
-
-   
-   
 <!DOCTYPE html>
 <html lang="ru">
 <head>
 <meta charset="UTF-8">
 <title>RBX Pro — Гайды по Roblox</title>
+
 <style>
 body {
     margin: 0;
@@ -30,17 +28,33 @@ header {
     border-radius: 12px;
 }
 
-h1 {
-    color: #ff4757;
+h1 { color: #ff4757; }
+h2 { color: #ffa502; margin-top: 30px; }
+
+button {
+    padding: 10px 15px;
+    margin-top: 10px;
+    background: #ff4757;
+    border: none;
+    color: white;
+    border-radius: 6px;
+    cursor: pointer;
 }
 
-h2 {
-    margin-top: 30px;
-    color: #ffa502;
+button:hover {
+    background: #ff6b81;
 }
 
-p {
-    line-height: 1.6;
+input {
+    padding: 8px;
+    margin-top: 10px;
+    width: 100px;
+}
+
+.result {
+    margin-top: 10px;
+    font-weight: bold;
+    color: #2ed573;
 }
 
 footer {
@@ -51,6 +65,7 @@ footer {
 }
 </style>
 </head>
+
 <body>
 
 <header>
@@ -58,31 +73,24 @@ footer {
 </header>
 
 <div class="container">
+
 <h1>Как стать популярным в Roblox</h1>
+<p>Создавай уникальные игры, делай крутые иконки и продвигай их через TikTok и YouTube.</p>
 
-<p>Многие игроки мечтают стать популярными в Roblox. 
-Но для этого нужно не просто играть, а создавать что-то своё.</p>
+<h2>🎯 Тест: Станешь ли ты популярным?</h2>
+<p>Ты часто обновляешь свою игру?</p>
+<button onclick="showResult()">Да, постоянно!</button>
+<div id="testResult" class="result"></div>
 
-<h2>1. Создавай уникальные игры</h2>
-<p>Используй Roblox Studio. Делай интересные режимы, 
-добавляй задания, уровни и крутые карты.</p>
+<h2>💰 Калькулятор Robux</h2>
+<p>Сколько Robux ты получаешь в день?</p>
+<input type="number" id="robuxInput" placeholder="Например 10">
+<br>
+<button onclick="calculateRobux()">Посчитать за 30 дней</button>
+<div id="calcResult" class="result"></div>
 
-<h2>2. Делай красивые иконки</h2>
-<p>Игроки сначала видят картинку игры. 
-Если она яркая и понятная — они нажмут на неё.</p>
-
-<h2>3. Продвигай игру</h2>
-<p>Снимай видео в TikTok или YouTube. 
-Показывай обновления и новые функции.</p>
-
-<h2>Безопасность в Roblox</h2>
-<p>Никогда не давай пароль другим людям. 
-Не переходи по подозрительным ссылкам. 
-Включи двухфакторную защиту.</p>
-
-<h2>Как заработать в Roblox</h2>
-<p>Можно продавать Game Pass, одежду, доступ к VIP-зонам 
-или создавать популярные игры с донатом.</p>
+<h2>🎁 Секрет недели</h2>
+<p>Добавь в свою игру ежедневную награду — игроки будут возвращаться каждый день!</p>
 
 </div>
 
@@ -90,5 +98,20 @@ footer {
 © 2026 RBX Pro | Сайт создан начинающим разработчиком 🚀
 </footer>
 
+<script>
+function showResult() {
+    document.getElementById("testResult").innerText =
+    "🔥 Отлично! У тебя есть шанс стать популярным разработчиком!";
+}
+
+function calculateRobux() {
+    let value = document.getElementById("robuxInput").value;
+    let result = value * 30;
+    document.getElementById("calcResult").innerText =
+    "💎 За 30 дней ты заработаешь примерно " + result + " Robux!";
+}
+</script>
+
 </body>
 </html>
+   
