--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@ body {
     background:#0f0f0f;
     color:white;
 }
-header {
+header {<!-- Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TDSEBDWKQ4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-TDSEBDWKQ4');
+</script>
     background:#ff3c3c;
     padding:20px;
     text-align:center;
@@ -136,3 +143,4 @@ document.body.insertAdjacentHTML("beforeend",
 
 </body>
 </html>
+
