--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ru">
 <head>
 <meta charset="UTF-8">
@@ -116,4 +116,5 @@ footer {
 
 </body>
 </html>
+
 
