--- a/index.html
+++ b/index.html
@@ -1,17 +1,10 @@
-
 <!DOCTYPE html>
 <html lang="ru">
 <head>
 <meta charset="UTF-8">
 <title>RBX Empire — Всё про Roblox</title>
-<style>
-body {
-    margin:0;
-    font-family:Arial;
-    background:#0f0f0f;
-    color:white;
-}
-header {<!-- Google Analytics -->
+
+<!-- Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-TDSEBDWKQ4"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -19,6 +12,15 @@ header {<!-- Google Analytics -->
   gtag('js', new Date());
   gtag('config', 'G-TDSEBDWKQ4');
 </script>
+
+<style>
+body {
+    margin:0;
+    font-family:Arial;
+    background:#0f0f0f;
+    color:white;
+}
+header {
     background:#ff3c3c;
     padding:20px;
     text-align:center;
@@ -69,6 +71,7 @@ footer {
 }
 </style>
 </head>
+
 <body>
 
 <header>🔥 RBX Empire — Портал по Roblox</header>
@@ -113,6 +116,39 @@ footer {
 © 2026 RBX Empire | Создано начинающим разработчиком 🚀
 </footer>
 
+<script>
+function test() {
+  document.getElementById("testRes").innerText =
+    "Да! Ты можешь стать топ-разработчиком 🚀";
+}
+
+function calc() {
+  let val = document.getElementById("rbx").value;
+  if(val === "") {
+    document.getElementById("calcRes").innerText =
+      "Введите число!";
+    return;
+  }
+  document.getElementById("calcRes").innerText =
+    "В месяц это примерно " + (val * 30) + " Robux.";
+}
+
+function secret() {
+  document.getElementById("secRes").innerText =
+    "Секрет: Делай свои игры уникальными, а не копируй других 🔥";
+}
+
+function subscribe() {
+  let nick = document.getElementById("nick").value;
+  if(nick === "") {
+    document.getElementById("subRes").innerText =
+      "Введите ник!";
+    return;
+  }
+  document.getElementById("subRes").innerText =
+    "Ник " + nick + " записан! 🚀";
+}
+</script>
 
 </body>
 </html>
