--- a/index.html
+++ b/index.html
@@ -220,15 +220,17 @@ function subscribe() {
 }
 
 /* Реальный счётчик */
-fetch("https://api.countapi.xyz/hit/rbxempire-main/visits")
+<script>
+fetch("https://api.visitorbadge.io/api/visitors?path=rbxempire123&countColor=%23ffa502")
   .then(res => res.json())
   .then(data => {
-    document.getElementById("visitorCounter").innerText = data.value;
+    document.getElementById("visitorCounter").innerText = data.total;
   })
   .catch(() => {
-    document.getElementById("visitorCounter").innerText = "Ошибка загрузки";
+    document.getElementById("visitorCounter").innerText = "0";
   });
 </script>
 
 </body>
 </html>
+
