--- a/index.html
+++ b/index.html
@@ -181,10 +181,10 @@ footer {
 </section>
 
 <div class="counter">
-👥 Всего посещений сайта: 
-<img src="https://visitorbadge.io/api/visitors?path=rbxempire123&label=&countColor=%23ffa502" />
+👥 Всего посещений сайта:
+<br><br>
+<img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https://rbxpro123.github.io/&count_bg=%23FF3C3C&title_bg=%23000000&icon=roblox.svg&icon_color=%23FFFFFF&title=visits&edge_flat=false"/>
 </div>
-
 <footer>
 © 2026 RBX Empire | Сделано с амбициями 🚀
 </footer>
@@ -223,3 +223,4 @@ function subscribe() {
 
 </body>
 </html>
+
